gcc/testsuite/algol68/compile/error-supper-3.a68
# { dg-options {-fstropping=supper} }  #

begin int _bar = 10; # { dg-error "unworthy" }  #
      skip
end
